--- a/htdocs/reserve.html
+++ b/htdocs/reserve.html
@@ -37,8 +37,8 @@
                     <legend>PrOCure Reservation Form</legend>
 
                     <div>
-                        <label for="name">Name (Last Name, Preferred Name, MI)
-                            <input type="text" id="name" name="name" required>
+                        <label for="fullname">Name (Last Name, Preferred Name, MI)
+                            <input type="text" id="fullname" name="fullname" required>
                         </label>
                     </div>
 
@@ -157,7 +157,7 @@
                 }
 
                 contactInfoData = {
-                    name: name.value,
+                    name: fullname.value,
                     email: email.value,
                     phoneNumber: phone_number.value,
                     deliMode: deliveryMode,
