--- a/htdocs/reserve.html
+++ b/htdocs/reserve.html
@@ -157,7 +157,7 @@
                 }
 
                 contactInfoData = {
-                    name: fullname.value,
+                    fullname: fullname.value,
                     email: email.value,
                     phoneNumber: phone_number.value,
                     deliMode: deliveryMode,
